# smarty

./: .gitattributes  .gitignore  .gitleaks.toml  .phpunit.result.cache  .travis.yml  AGENTS.md  AUTHORS  BUGS  CHANGELOG.md  CONTRIBUTING.md  CREDITS  ChangeLog  Config_File.class.php  FAQ  INHERITANCE_RELEASE_NOTES.txt  INSTALL  Makefile  NEWS  NEW_FEATURES.txt  PHP_8.1_8.4_COMPATIBILITY_FIXES.md  QUICKSTART  QUICK_START  README  README.md  RELEASE_NOTES  RESOURCES  SMARTY2_BC_NOTES  SMARTY_3.0_BC_NOTES.txt  SMARTY_3.1_NOTES.txt  Smarty.addons.php  Smarty.class.php  Smarty_Compiler.class.php  TESTIMONIALS  TODO  TODO.md  TODO.txt  a2-tests.txt  cache-tests.txt  change_log.txt  composer.json  (+24 more)
docs/: .cvsignore  Makefile.in  README  TODO  appendixes.sgml  configure.in  designers.sgml  features.md  getting-started.md  getting-started.sgml  html-common.dsl  html.dsl  index.md  manual.sgml  manual.xml.in  philosophy.md  preface.md  preface.sgml  programmers.sgml  requirements.txt  upgrading.md
docs/api/: basics.md  configuring.md  inheritance.md  rendering.md  resources.md  security.md
docs/api/caching/: basics.md  custom-storage-layers.md  multiple-caches-per-template.md
docs/api/extending/: block-tags.md  extensions.md  introduction.md  modifiers.md  tags.md
docs/api/filters/: output-filters.md  postfilters.md  prefilters.md
docs/api/variables/: assigning.md  config-files.md  objects.md  static-class-methods.md  streams.md
docs/appendixes/: bugs.md  resources.md  tips.md  troubleshooting.md
docs/chm/: .cvsignore  README  common.php  make_chm.bat  make_chm.php  make_chm_fancy.php
docs/de/: appendixes.sgml  bookinfo.xml  common.dsl  designers.sgml  getting-started.sgml  getting-started.xml  html-common.dsl  html.dsl  language-defs.ent  language-snippets.ent  livedocs.ent  manual.sgml  preface.xml  programmers.sgml
docs/de/appendixes/: bugs.xml  resources.xml  tips.xml  troubleshooting.xml
docs/de/designers/: chapter-debugging-console.xml  config-files.xml  language-basic-syntax.xml  language-builtin-functions.xml  language-combining-modifiers.xml  language-custom-functions.xml  language-modifiers.xml  language-variables.xml
docs/de/programmers/: advanced-features.xml  api-functions.xml  api-variables.xml  caching.xml  plugins.xml  smarty-constants.xml
docs/designers/: chapter-debugging-console.md  config-files.md  language-basic-syntax.md  language-builtin-functions.md  language-custom-functions.md  language-modifiers.md  language-variables.md
docs/designers/language-basic-syntax/: index.md  language-escaping.md  language-syntax-attributes.md  language-syntax-comments.md  language-syntax-functions.md  language-syntax-operators.md  language-syntax-quotes.md  language-syntax-tags.md  language-syntax-variables.md
docs/designers/language-builtin-functions/: index.md  language-function-append.md  language-function-assign.md  language-function-block.md  language-function-call.md  language-function-capture.md  language-function-config-load.md  language-function-extends.md  language-function-foreach.md  language-function-function.md  language-function-if.md  language-function-include.md  language-function-insert.md  language-function-ldelim.md  language-function-literal.md  language-function-nocache.md  language-function-php.md  language-function-section.md  language-function-setfilter.md  language-function-while.md
docs/designers/language-custom-functions/: index.md  language-function-eval.md  language-function-fetch.md  language-function-html-checkboxes.md  language-function-html-image.md  language-function-html-options.md  language-function-html-radios.md  language-function-html-select-date.md  language-function-html-select-time.md  language-function-html-table.md  language-function-mailto.md  language-function-math.md  language-function-textformat.md
docs/designers/language-modifiers/: index.md  language-modifier-capitalize.md  language-modifier-cat.md  language-modifier-count.md  language-modifier-date-format.md  language-modifier-debug-print-var.md  language-modifier-empty.md  language-modifier-escape.md  language-modifier-from-charset.md  language-modifier-in_array.md  language-modifier-is_array.md  language-modifier-isset.md  language-modifier-join.md  language-modifier-json-encode.md  language-modifier-lower.md  language-modifier-nl2br.md  language-modifier-noprint.md  language-modifier-number-format.md  language-modifier-raw.md  (+12 more)
docs/dsssl/: common.dsl  html-common.dsl  html.dsl  php.dsl
docs/en/: appendixes.xml  bookinfo.xml  designers.xml  getting-started.xml  language-defs.ent  language-snippets.ent  livedocs.ent  make_chm_index.html  preface.xml  programmers.xml
docs/entities/: .cvsignore  global.ent  version.ent.in
docs/es/: bookinfo.xml  getting-started.xml  language-snippets.ent  preface.xml
docs/fop/: README  thryn.xml
docs/fr/: appendixes.sgml  bookinfo.xml  common.dsl  designers.sgml  getting-started.xml  language-defs.ent  language-snippets.ent  livedocs.ent  make_chm_index.html  manual.sgml  manual.xml  preface.sgml  preface.xml  programmers.sgml  translation.xml
docs/id/: bookinfo.xml  getting-started.xml  livedocs.ent  preface.xml
docs/it/: bookinfo.xml  getting-started.xml  language-snippets.ent  livedocs.ent  preface.xml
docs/ja/: bookinfo.xml  getting-started.xml  language-defs.ent  language-snippets.ent  livedocs.ent  make_chm_index.html  preface.xml  translation.xml
docs/programmers/: advanced-features.md  api-functions.md  api-variables.md  bc.md  caching.md  charset.md  plugins.md  resources.md  smarty-constants.md
docs/pt_BR/: appendixes.sgml  bookinfo.xml  common.dsl  designers.sgml  getting-started.xml  language-defs.ent  livedocs.ent  make_chm_index.html  manual.sgml  php.dsl  preface.sgml  preface.xml  programmers.sgml  translation.xml
docs/ru/: bookinfo.xml  getting-started.xml  language-defs.ent  language-snippets.ent  livedocs.ent  make_chm_index.html  preface.xml
docs/scripts/: file-entities.php.in  generate_web.php  html_syntax.php  revcheck.php
docs/xsl/: common.xsl  fo.xsl
(+6437 files in other folders)
